# lerobot

./: .gitignore
src/lerobot/policies/: factory.py
src/lerobot/policies/act/: configuration_act.py  modeling_act.py
src/lerobot/policies/pi0/: modeling_pi0.py
src/lerobot/policies/pi05/: modeling_pi05.py
src/lerobot/teleoperators/keyboard/: teleop_keyboard.py
src/mio_ws/src/datasets/: download_libero.py
src/mio_ws/src/inference_acceleration/: bench_attn.py  build_trt_engine.sh  export_guide.md  pytorch_to_onnx.py  run_inference.py  run_test.py  run_trt_inference.py  test_profile_prefix_denoise.py  test_steps_sweep.py
src/mio_ws/src/inference_acceleration/utils/: action_analysis.py  (+5 more)
src/mio_ws/src/plugins/lerobot_camera_mujoco/: README.md  pyproject.toml
src/mio_ws/src/plugins/lerobot_camera_mujoco/src/lerobot_camera_mujoco/: __init__.py  config_mujoco_camera.py  mujoco_camera.py
src/mio_ws/src/plugins/lerobot_robot_so100_mujoco/: README.md  pyproject.toml
src/mio_ws/src/plugins/lerobot_robot_so100_mujoco/models/so100/: so100.xml
src/mio_ws/src/plugins/lerobot_robot_so100_mujoco/models/so101/: so101.xml
src/mio_ws/src/plugins/lerobot_robot_so100_mujoco/src/lerobot_robot_so100_mujoco/: __init__.py  config_so100_mujoco.py  so100_mujoco.py
src/mio_ws/src/plugins/lerobot_robot_so100_mujoco/src/lerobot_robot_so100_mujoco/common/: __init__.py  math_utils.py  rpc_server.py
src/mio_ws/src/plugins/lerobot_robot_so101_mujoco/: README.md  pyproject.toml
src/mio_ws/src/plugins/lerobot_robot_so101_mujoco/src/lerobot_robot_so101_mujoco/: __init__.py  config_so101_mujoco.py  so101_mujoco.py
src/mio_ws/src/plugins/lerobot_robot_so101_mujoco/src/lerobot_robot_so101_mujoco/common/: __init__.py  backend.py  ik_solver.py  mujoco_interface.py  mujoco_utils.py  rpc_server.py
src/mio_ws/src/plugins/lerobot_teleoperator_so100_sim2real/: README.md  pyproject.toml
src/mio_ws/src/plugins/lerobot_teleoperator_so100_sim2real/src/lerobot_teleoperator_so100_sim2real/: __init__.py  config_so100_sim2real.py  so100_sim2real.py
src/mio_ws/src/simulation/: run_sim.py
