[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_so100_sim2real"
version = "0.1.0"
description = "LeRobot installable teleoperator plugin for SO100 sim2real via RPC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "lerobot_teleoperator_so100_sim2real*",
]
